# agent-starter

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
agent_starter/: __init__.py  __main__.py  agent.py  config.py  graph.py  llm.py  server.py  state.py
agent_starter/memory/: __init__.py  long_term.py
agent_starter/memory/backends/: __init__.py  sqlite.py
agent_starter/tools/: registry.py
agent_starter/tools/builtin/: __init__.py  bash_executor.py  calculator.py  code_editor.py  file_reader.py  github.py  image_vision.py  python_repl.py  sqlite_query.py  web_search.py
agents/: default.yaml  default_persona.md
agents/examples/: customer_support.yaml  customer_support_persona.md  research_assistant.yaml  research_assistant_persona.md
examples/01_basic/: run.py
examples/02_intermediate/: run.py
examples/03_advanced/: run.py
tests/: test_config.py  test_memory.py  test_tools.py
web/: index.html  script.js  styles.css
